// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiPicker component can show in error state 1`] = `
<div
  class="MuiFormControl-root"
>
  
  <div
    class="MuiInputBase-root MuiInput-root PickerInput-InputRoot MuiInput-underline MuiInputBase-error MuiInput-error MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
  >
    <div
      class="MuiChip-root MuiChip-deletable MultiPicker-pickerChip"
      role="button"
      tabindex="-1"
    >
      <span
        class="MuiChip-label"
      >
        some item
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiChip-deleteIcon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
    </div>
    <input
      aria-autocomplete="list"
      aria-invalid="true"
      aria-labelledby="downshift-0-label"
      autocomplete="off"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart PickerInput-inputRoot"
      id="downshift-0-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`MultiPicker component renders dropdown when typing 1`] = `
<li
  aria-selected="false"
  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
  id="downshift-0-item-0"
  role="menuitem"
  style="padding: 0px; height: auto;"
  tabindex="-1"
>
  <p
    class="MuiTypography-root MuiTypography-body1"
    style="padding: 11px 16px;"
  >
    some suggestion
  </p>
  <span
    class="MuiTouchRipple-root"
  />
</li>
`;

exports[`MultiPicker component renders empty content 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  role="combobox"
  style="position: relative;"
>
  <div
    class="MuiFormControl-root"
  >
    
    <div
      class="MuiInputBase-root MuiInput-root PickerInput-InputRoot MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-autocomplete="list"
        aria-invalid="false"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="MuiInputBase-input MuiInput-input PickerInput-inputRoot"
        id="downshift-0-input"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiPicker component renders single chip 1`] = `
<div
  class="MuiFormControl-root"
>
  
  <div
    class="MuiInputBase-root MuiInput-root PickerInput-InputRoot MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
  >
    <div
      class="MuiChip-root MuiChip-deletable MultiPicker-pickerChip"
      role="button"
      tabindex="-1"
    >
      <span
        class="MuiChip-label"
      >
        some item
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiChip-deleteIcon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
    </div>
    <input
      aria-autocomplete="list"
      aria-invalid="false"
      aria-labelledby="downshift-0-label"
      autocomplete="off"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart PickerInput-inputRoot"
      id="downshift-0-input"
      type="text"
      value=""
    />
  </div>
</div>
`;
